--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
             <dt class="bgcolor02">9일차 - 문서객체조작</dt>
             <dd><a href="./0127/gallery.html" title="종합 이미지 갤러리">이미지 갤러리(캡션, 정렬, 모달, 제목, 페이지수)</a></dd>
 
+            <dt class="bgcolor02">10일차 - 문서객체탐색 </dt>
+            <dd><a href="./0130/01_jquery_traversing.html" title="">문서객체탐색 (Traversing)</a></dd>
+            <dd><a href="./0130/m_index.html" title="실습예제) 에뛰드 모바일 웹 내비게이션">실습예제) 에뛰드 모바일 웹 내비게이션</a></dd>
+
             <!-- <dt class="bgcolor02">0일차 - </dt>
             <dd><a href="./" title=""></a></dd>
             <dd><a href="./" title=""></a></dd> -->
