--- a/index.html
+++ b/index.html
@@ -218,6 +218,12 @@
             <dd><a href="./0130/01_jquery_traversing.html" title="">문서객체탐색 (Traversing)</a></dd>
             <dd><a href="./0130/m_index.html" title="실습예제) 에뛰드 모바일 웹 내비게이션">실습예제) 에뛰드 모바일 웹 내비게이션</a></dd>
 
+            <dt class="bgcolor02">11일차 - 속성관련 (offset)</dt>
+            <dd><a href="./0131/01_startbucks_faq.html" title="스타벅스 FAQ 구현하기">스타벅스 FAQ 구현하기</a></dd>
+            <dd><a href="./0131/cjmall_faq.html" title="CJ몰 FAQ 구현하기">CJ몰 FAQ 구현하기</a></dd>
+            <dd><a href="./0131/02_jquery_속성관련(offset).html" title="속성관련 offset">속성관련 (offset, 위치)</a></dd>
+            <dd><a href="./0131/index.html" title="스크롤 레이아웃(scroll layout)">스크롤 레이아웃(scroll layout)</a></dd>
+
             <!-- <dt class="bgcolor02">0일차 - </dt>
             <dd><a href="./" title=""></a></dd>
             <dd><a href="./" title=""></a></dd> -->
