--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
             <dd><a href="./0125/total_slide(세로).html" title="토탈 슬라이드_세로버전">토탈 슬라이드_세로버전</a></dd>
             <dd><a href="./0125/coupang exec.html" title="실습예제_쿠팡 이미지 갤러리">실습예제_쿠팡 이미지 갤러리</a></dd>
 
-            <dt class="bgcolor02">8일차 - 문서객체조작</dt>
-            <dd><a href="./0126/jquery_DOM_class.html" title="제이쿼리 문서객체조작">문서객체조작 - class</a></dd>
+            <dt class="bgcolor02">8일차 - 문서객체조작 (Class)</dt>
+            <dd><a href="./0126/jquery_DOM_class.html" title="제이쿼리 문서객체조작">문서객체조작 - Class</a></dd>
             <dd><a href="./0126/jquery_DOM_add_remove.html" title="제이쿼리 내용추가,삭제">문서객체조작 - 내용추가, 삭제</a></dd>
             <dd><a href="./0126/jquery_DOM_modal_window.html" title="제이쿼리 모달윈도">모달윈도 (쿠키)</a></dd>
             <dd><a href="./0126/jquery_DOM_modal_window checkbox.html" title="제이쿼리 모달윈도 체크박스 버전">모달윈도 (쿠키) - 체크박스 버전</a></dd>
@@ -214,15 +214,19 @@
             <dt class="bgcolor02">9일차 - 문서객체조작</dt>
             <dd><a href="./0127/gallery.html" title="종합 이미지 갤러리">이미지 갤러리(캡션, 정렬, 모달, 제목, 페이지수)</a></dd>
 
-            <dt class="bgcolor02">10일차 - 문서객체탐색 </dt>
+            <dt class="bgcolor02">10일차 - 문서객체탐색 (Traversing) </dt>
             <dd><a href="./0130/01_jquery_traversing.html" title="">문서객체탐색 (Traversing)</a></dd>
             <dd><a href="./0130/m_index.html" title="실습예제) 에뛰드 모바일 웹 내비게이션">실습예제) 에뛰드 모바일 웹 내비게이션</a></dd>
 
-            <dt class="bgcolor02">11일차 - 속성관련 (offset)</dt>
+            <dt class="bgcolor02">11일차 - 문서객체탐색 (offset, scroll)</dt>
             <dd><a href="./0131/01_startbucks_faq.html" title="스타벅스 FAQ 구현하기">스타벅스 FAQ 구현하기</a></dd>
             <dd><a href="./0131/cjmall_faq.html" title="CJ몰 FAQ 구현하기">CJ몰 FAQ 구현하기</a></dd>
-            <dd><a href="./0131/02_jquery_속성관련(offset).html" title="속성관련 offset">속성관련 (offset, 위치)</a></dd>
-            <dd><a href="./0131/index.html" title="스크롤 레이아웃(scroll layout)">스크롤 레이아웃(scroll layout)</a></dd>
+            <dd><a href="./0131/02_jquery_속성관련(offset).html" title="속성관련 offset">탐색 메서드 (offset, 위치)</a></dd>
+            <dd><a href="./0131/index.html" title="세로 스크롤 레이아웃">세로 스크롤 레이아웃(Scroll layout)</a></dd>
+
+            <dt class="bgcolor02">12일차 - 문서객체조작 (Demensitions)</dt>
+            <dd><a href="./0201/01_가로스크롤 레이아웃.html" title="가로 스크롤 레이아웃">가로 스크롤 레이아웃(Scroll layout)</a></dd>
+            <dd><a href="./0201/02_제이쿼리 문서객체조작-demensition.html" title="">크기, 수치조작 (Demensitions)</a></dd>
 
             <!-- <dt class="bgcolor02">0일차 - </dt>
             <dd><a href="./" title=""></a></dd>
