--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <dd><a href="./0126/jquery_DOM_modal_window checkbox.html" title="제이쿼리 모달윈도 체크박스 버전">모달윈도 (쿠키) - 체크박스 버전</a></dd>
             <dd><a href="./0126/jquery_DOM_image_slide.html" title="이미지 가로 슬라이드">이미지 가로 슬라이드 (협력사 배너)</a></dd>
 
-            <dt class="bgcolor02">9일차 - 문서객체조작</dt>
+            <dt class="bgcolor02">9일차 - 문서객체조작 - 이미지 갤러리</dt>
             <dd><a href="./0127/gallery.html" title="종합 이미지 갤러리">이미지 갤러리(캡션, 정렬, 모달, 제목, 페이지수)</a></dd>
 
             <dt class="bgcolor02">10일차 - 문서객체탐색 (Traversing) </dt>
@@ -227,6 +227,10 @@
             <dt class="bgcolor02">12일차 - 문서객체조작 (Demensitions)</dt>
             <dd><a href="./0201/01_가로스크롤 레이아웃.html" title="가로 스크롤 레이아웃">가로 스크롤 레이아웃(Scroll layout)</a></dd>
             <dd><a href="./0201/02_제이쿼리 문서객체조작-demensition.html" title="">크기, 수치조작 (Demensitions)</a></dd>
+
+            <dt class="bgcolor02">13일차 - 문서객체조작 - 탭메뉴 콘텐츠 </dt>
+            <dd><a href="./0202/01_제이쿼리 문서객체모델_탭메뉴콘텐츠.html" title="문서객체모델_탭메뉴콘텐츠">탭메뉴 콘텐츠</a></dd>
+            <dd><a href="./0202/실습예제_이미지를 활용한 탭메뉴 콘텐츠(ME).html" title="실습예제) 이미지를 활용한 탭메뉴 콘텐츠">실습예제) 이미지를 활용한 탭메뉴 콘텐츠</a></dd>
 
             <!-- <dt class="bgcolor02">0일차 - </dt>
             <dd><a href="./" title=""></a></dd>
