--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
             <dd><a href="./0202/01_제이쿼리 문서객체모델_탭메뉴콘텐츠.html" title="문서객체모델_탭메뉴콘텐츠">탭메뉴 콘텐츠</a></dd>
             <dd><a href="./0202/실습예제_이미지를 활용한 탭메뉴 콘텐츠(ME).html" title="실습예제) 이미지를 활용한 탭메뉴 콘텐츠">실습예제) 이미지를 활용한 탭메뉴 콘텐츠</a></dd>
 
+            <dt class="bgcolor02">14일차 - 현대자동차 캐스퍼 홈페이지 클론 코딩(원페이지 스크롤 레이아웃)</dt>
+            <dd><a href="./0203(캐스퍼&PHP)/index.html" title="캐스퍼 원페이지 스크롤 레이아웃">현대자동차 캐스퍼 원페이지 레이아웃 & 시승신청(PHP) 구현</a></dd>
+
+            <dt class="bgcolor02">15일차 - 써브웨이 홈페이지 리뉴얼 (미에로화이바 참고)</dt>
+            <dd><a href="./0209(서브웨이)/index.html" title="써브웨이 홈페이지 리뉴얼">써브웨이 홈페이지 리뉴얼</a></dd>
+
             <!-- <dt class="bgcolor02">0일차 - </dt>
             <dd><a href="./" title=""></a></dd>
             <dd><a href="./" title=""></a></dd> -->
